--- a/src/app.less
+++ b/src/app.less
@@ -1,3 +1,10 @@
-h2 {
-  font-size: 20px;
+html, body {
+  height: 100%;
+  #root {
+    height: 100%;
+  
+    .ant-layout {
+      height: 100%;
+    }
+  }
 }
