添加echarts依赖，添加 dashboard 页面

--- a/src/app.less
+++ b/src/app.less
@@ -1,12 +1,18 @@
 html,
 body {
   height: 100%;
+  overflow: hidden;
 
   #root {
     height: 100%;
 
     .ant-layout {
       height: 100%;
+
+      .ant-layout-content {
+        overflow-y: auto;
+        overflow-x: hidden;
+      }
     }
   }
 }
